--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme 
 
-title: Ziyi Zhao and Cheng Ma
-description: our personal website
+title: An ESports Earnings Data App by Ziyi Zhao and Cheng Ma
+description: An Interactive Data App 
 
 show_downloads: ["true"]
